After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753086 - dtsdec: fix taglist leak
dtsdec: fix taglist leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-31 01:47 UTC by Vineeth
Modified: 2015-08-16 13:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix taglist leak (803 bytes, patch)
2015-07-31 01:48 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-07-31 01:47:21 UTC
taglist merge doesnt take ownership. So should free the tags after use
Comment 1 Vineeth 2015-07-31 01:48:10 UTC
Created attachment 308506 [details] [review]
fix taglist leak
Comment 2 Tim-Philipp Müller 2015-07-31 09:49:10 UTC
commit 9115a750f710d832ecca69c7f53ee0d947ad61f7
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Fri Jul 31 10:47:27 2015 +0900

    dtsdec: fix taglist leak
    
    taglist merge doesnt take ownership. So should free the tags after use
    
    https://bugzilla.gnome.org/show_bug.cgi?id=753086